[tool.poetry]
name = "poetry-mkPatient"
version = "0.1.0"
description = ""
authors = ["Kaan Avci <kaanyewest1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datetime = "^4.3"
nanoid = "^2.0.0"
pandas = "^1.0.5"
numpy = "^1.19.0"
pytz = "^2020.1"
random = "*"
matplotlib = "*"
matplotlib.pyplot = "*"
dateutil.parser = "*"
matplotlib.ticker = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
